
CHANGES v2.08 released 8/Jan/98
-------------------------------

* Added improved -lgcc support.
* PGPLOT version check in test12.p

CHANGES (v2.06 to 2.07)
------------------------

* Added support for new functions in PGPLOT 5.2.0 library. Note: TK
  driver looks nice but haven't yet implemented this in perl version.
  Presumably can be done with perl/Tk.
  
* Extra test12.p for new routines

* No longer supporting binary versions in any shape or form. Life is too 
  short. Get a FORTRAN compiler. :-)

* Added -lgcc for gcc built perls in ExtUtils::F77

CHANGES (v2.02 to 2.06)
------------------------

(OK I know I should have been more organised about updating this
file!)

* Important bug fixes to array packing code which is now 
  called arrays.{c,h}

* Added fake MAIN__ symbol to stop annoying bug reports about some
  versions of gcc. :-)

* arrays.c now supports unsigned chars and shorts. (Thanks Tim!)

* Additions to HELP and documentation

* Patches to improve ExtUtils::F77

* Improvements to tests

* pgcompatibilty.p (NOT INSTALLED!) defines simple compatibilty
  routines for perl4 pgperl version. This had some gnarly single point
  versions of routines which are now superfluous.


CHANGES (v2.02 from 2.01) 
-------------------------

o Made Makefile.PL more clever.

o Added a file HELP with useful problem fixing information.

o Fixed some small type cast bugs in kgbpack.c

CHANGES (v2.01 from 1.0b) 
-------------------------

o No longer providing perl4 version.

o All the array packing functions reimplemented in C to improve
  speed and robustness.

o Simplified build procedure - PGPLOT module should now build
  in standard Perl way. (i.e. 'perl Makefile.PL; make; make test; make
  install'). Makefile.PL should not have to be edited and upgrading
  should now be much easier.

o Added 'pass by reference' convention to allow explicit use of
  pre-packed binary data.

o Supports pgplot routines up to pgplot v5.1.1.

o Added POD documentation.
