@@ -1,3 +1,32 @@
+perl5.004_?? problem
+--------------------
+
+If you type 'make' and see an error message like:
+
+
+  /usr/bin/perl -I/usr/lib/perl5/i586-linux/5.00404 -I/usr/lib/perl5
+  /usr/lib/perl5/ExtUtils/xsubpp  -typemap /usr/lib/perl5/ExtUtils/typemap -typemap typemap
+  PGPLOT.xs >PGPLOT.tc && mv PGPLOT.tc PGPLOT.c
+  make: *** [PGPLOT.c] Error 139
+  
+  (sometimes with a segmentation violation or bus error)
+  
+Then you have encountered a bug in perl versions 5.004_01 and later (5.004
+itself works just fine). The generation of PGPLOT.c from PGPLOT.xs fails
+because of a bug in xsubpp to do with handling of line numbers (of all
+things).
+
+This has been reported and ought to be fixed. Meanwhile here is
+a workaround:
+
+  Edit the 'Makefile' which has been generated by the 'perl Makefile.PL ...'
+  command and add the '-nolinenumbers' option to the xsubpp call. The
+  line should look something like:
+  
+  XSUBPPARGS = -nolinenumbers -typemap $(XSUBPPDIR)/typemap -typemap typemap
+  
+Then type 'make' again and everything should work.
+
 
 Common Problems and Possible Solutions
 --------------------------------------
