@@ -1,3 +1,4 @@
+README
 CHANGES
 HELP
 ExtUtils/F77.pm
