@@ -1,3 +1,8 @@
+CHANGES v2.09 released 17/Feb/98
+--------------------------------
+
+* Documented xubpp problem in HELP because I got fed uo
+  with waiting for p5p to fix. No other changes.
 
 CHANGES v2.08 released 8/Jan/98
 -------------------------------
